# N-B_Financial_Tracker

./: Cargo.toml
backend/: .env.example  .gitignore  Cargo.toml  expenses.rs  mod.rs  orders.rs  prelude.rs  registration_code_resets.rs  reports.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250910_123032_create_users.rs  m20250910_123037_create_orders.rs  m20250910_123043_create_invoices.rs  m20250910_123048_create_expenses.rs  m20250910_123054_create_reports.rs  m20250928_033942_create_expenses.rs  m20250928_033942_create_invoices.rs  m20250928_033942_create_orders.rs  m20250928_033942_create_reports.rs  m20250928_033942_create_users.rs  m20251002_093643_create_registration_codes.rs  m20251002_201324_create_registration_code_resets.rs
backend/migrations/: Cargo.toml  clinic.db  init.sql
backend/migrations/src/: m20250910_123048_create_expenses.rs
backend/src/: config.rs  db.rs  errors.rs  main.rs  routes.rs
backend/src/entities/: invoices.rs  mod.rs  prelude.rs  registration_codes.rs  users.rs
backend/src/handlers/: dashboard.rs  expenses.rs  invoices.rs  mod.rs  orders.rs  registration.rs  reports.rs  users.rs
backend/src/middleware/: auth.rs  logging.rs
backend/src/services/: expenses.rs  invoices.rs  mod.rs  orders.rs  registration.rs  reports.rs  users.rs
backend/src/utils/: hash.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src-tauri/: tauri.conf.json
src-tauri/: tauri.conf.json
