[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-cors = "0.7.1"
actix-web = "4"

# Migration support
sea-orm-migration = "0.12"

# Environment variables
dotenvy = "0.15"

# Serialization / JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Logging
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }